--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <version>2.1.0.RELEASE</version>
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
-  <groupId>com.org.monitor</groupId>
+  <groupId>com.github.devgcoder</groupId>
   <artifactId>monitor-boot-starter</artifactId>
   <version>1.1.1</version>
   <name>monitor-boot-starter</name>
